@@ -16,6 +16,8 @@ glibc (2.23.90+20160507.87523e9-2) UNRELEASED; urgency=medium
     and an explanation.
   * debian/testsuite-xfail-debian.mk: do not allow math/test-fenv to
     fail now that we do not have Loongson 2 buildds anymore.
+  * debian/patches/kfreebsd/local-sysdeps.diff, local-fbtl.diff:
+    update to revision 6083 (from glibc-bsd).
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 Jul 2016 20:50:17 +0200
 
